fixed mobile nav showing up at certain widths and mobile nav bg not recating to dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,8 @@
   --subtitle-color-d: #aaa;
   --bg-color-d:#222;
   --hero-bg-d: rgb(20,20,20,0.8); 
-  --footer-bg-d: #444;
-  --navbar-color-d: #333;
+  --footer-bg-d: #333;
+  --navbar-color-d: #444;
 }
 
 
@@ -162,8 +162,8 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header {
     width: 300px;
-    background: #fff;
-    border-right: 1px solid #e6e9ec;
+    background: var(--bg-color);
+    border-right: 5px solid var(--navbar-color);
     left: -300px;
   }
 }
@@ -261,6 +261,7 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
   border-radius: 50px;
   padding: 5px;
+  display: none;
 }
 .mobile-nav-toggle i {
   color: var(--title-color);
@@ -277,6 +278,12 @@ h1, h2, h3, h4, h5, h6 {
   background-color: var(--accent-color);
 }
 
+@media (max-width: 1000px){
+  .mobile-nav-toggle {
+   display: block;
+  }
+}
+  
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -653,18 +660,19 @@ section {
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
+
 .portfolio .portfolio-wrap .portfolio-info h3 {
-  font-size: 30px;
+  font-size: 40px;
   color: var(--title-color);
   font-weight: 800;
 }
 .portfolio .portfolio-wrap .portfolio-info p {
   color: var(--title-color);
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 500;
   /* text-transform: uppercase; */
   padding: 0;
-  margin: 15px;
+  margin: 30px;
 }
 .portfolio .portfolio-wrap .portfolio-links {
   text-align: center;
@@ -673,7 +681,7 @@ section {
 .portfolio .portfolio-wrap .portfolio-links a {
   color: var(--title-color);
   margin: 0 10px;
-  font-size: 30px;
+  font-size: 60px;
   display: inline-block;
   transition: 0.3s;
 }
@@ -699,16 +707,16 @@ section {
   right: 15px;
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
   .portfolio .portfolio-wrap .portfolio-info h3 {
-    font-size: 40px;
+    font-size: 30px;
   }
   .portfolio .portfolio-wrap .portfolio-info p {
-  font-size: 20px;
-  margin: 30px;
+  font-size: 16px;
+  margin: 15px;
   }
   .portfolio .portfolio-wrap .portfolio-links a {
-  font-size: 60px;
+  font-size: 30px;
   }
 }
 
